[metadata]
name=stats_visual
version=1.0.1
description=package to visualize various statistical distributions
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
author=Timotius Marselo
author_email=timotiusmarselo@gmail.com

[options]
packages = stats_visual
package_dir =
    =.

